# simple-agent-functions-python

./: .agentignore  .dockerignore  .env.example  .gitignore  Dockerfile  MCP-extension-notes.md  README.md  agent.yaml  azure.yaml  chat.py  function_app.py  host.json  local.settings.json  main.py  pyproject.toml  repo_digest_agent.py  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  first-run-notice.txt
infra/: main.bicep  main.json
