[project]
name = "simple-agent-foundry-hosted-python"
version = "0.1.0"
description = "A simple Agent Framework agent hosted by Microsoft Foundry."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agent-framework-foundry",
    "agent-framework-foundry-hosting>=1.0.0a260630",
    "azure-identity",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "debugpy",
]

[tool.uv]
package = false
