[project]
name = "simple-agent-functions-python"
version = "1.0.0"
description = "Azure Functions and Copilot SDK sample that creates daily GitHub repository digests."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-functions",
    "azure-identity",
    "github-copilot-sdk",
]

[tool.uv]
package = false
